force-app/main/default/objects/SVMXA360__ConditionalOutputDetail__c/SVMXA360__ConditionalOutputDetail__c.object-meta.xml
<CustomObject>
    <description>This object is used to track attribute details at the conditional level like previous Reading or Date/Time at which the work order was last generated. This object relates to the Conditional Output object to provide an audit trail of information about an Asset&apos;s attribute values (both expected and actual) when a work order is generated for it based on a Maintenance Plan&apos;s work rule.</description>
    <label>A360 Conditional Output Detail</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Conditional Output Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A360 Conditional Output Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>