force-app/main/default/objects/SVMXA360__ConditionalOutputDetail__c/fields/SVMXA360__AssetConditionId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetConditionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Asset Condition which was evaluated at the time of Work Order generation from Maintenance Plan.</description>
    <label>Asset Condition</label>
    <referenceTo>SVMXA360__SM_Condition__c</referenceTo>
    <relationshipLabel>A360 Conditional Output Details</relationshipLabel>
    <relationshipName>A360_Conditional_Output_Details</relationshipName>
    <type>Lookup</type>
</CustomField>