force-app/main/default/objects/SVMXA360__ConditionalOutputDetail__c/fields/SVMXA360__AttributeValue__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AttributeValue__c</fullName>
    <description>The actual reading value of the asset&apos;s attribute when it met the condition in the Maintenance Plan Work Rule, which resulted in Work Order generation.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Attribute Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>