force-app/main/default/objects/SVMXA360__ConditionalOutputDetail__c/fields/SVMXA360__ClosedReading__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ClosedReading__c</fullName>
    <description>The reading value of the asset&apos;s attribute when the work order is closed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>