force-app/main/default/objects/SVMXA360__ConditionalOutputDetail__c/fields/SVMXA360__ConditionalOutputId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ConditionalOutputId__c</fullName>
    <description>Master Detail relationship to Conditional Output which holds Work Order generated details.</description>
    <label>Conditional Output</label>
    <referenceTo>SVMXA360__ConditionalOutput__c</referenceTo>
    <relationshipLabel>A360 Conditional Output Details</relationshipLabel>
    <relationshipName>Conditional_Output_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>