force-app/main/default/objects/SVMXA360__ConditionalOutputDetail__c/fields/SVMXA360__ExpectedReading__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpectedReading__c</fullName>
    <description>The expected reading value of an asset&apos;s attribute, which should qualify a condition in the Maintenance Plan Work Rule to generate a Work Order.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Reading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>