force-app/main/default/objects/SVMXA360__ConditionalOutputDetail__c/fields/SVMXA360__isLatest__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__isLatest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify the latest reading of all the available condition output details records</description>
    <label>Latest</label>
    <type>Checkbox</type>
</CustomField>